# ZJU-Physical-Experiment-Report

./: README.md
university-physics-calculator/: CMakeLists.txt  说明.md
university-physics-calculator/include/: Calculator.h  DataSet.h  MainWindow.h  ReportGenerator.h
university-physics-calculator/src/: Calculator.cpp  DataSet.cpp  MainWindow.cpp  ReportGenerator.cpp  main.cpp
university-physics-calculator/ui/: mainwindow.ui
